outputs/tsp_constructive-constructive/2025-12-21_21-29-06/evaluations/problem_eval-1638724730425993478_stdout.txt
Traceback (most recent call last):
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master/problems/tsp_constructive/eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance to immediate travel distance and the candidate node's distance to the tour's destination.}
                                                                                                        ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master/problems/tsp_constructive/eval.py", line 13, in <module>
    from gpt import select_next_node
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance to immediate travel distance and the candidate node's distance to the tour's destination.}
                                                                                                        ^
SyntaxError: unmatched '}'
